--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
 </head>
 <body>
   <div class="navbar">
-    <h1>ghotsoo.github.io</h1>
+    <h1>GHOTSOO</h1>
   </div>
   <div class="container">
     <div class="repo-box">
-      <h2>My Website</h2>
-      <p>Built fully on my Android phone.</p>
+      <h2>GHOTSOO</h2>
+      <p>First ever website to build by me hehe.</p>
       <div class="code">
 <pre>
 &lt;html&gt;
   &lt;head&gt;&lt;/head&gt;
   &lt;body&gt;
-    &lt;h1&gt;Welcome to My Website!&lt;/h1&gt;
+    &lt;h1&gt;GHOTSOO!&lt;/h1&gt;
   &lt;/body&gt;
 &lt;/html&gt;
 </pre>
