--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
       <label for="citySelect">City:</label>
       <select id="citySelect" onchange="populateSubCities()">
         <option value="">Select a City</option>
+        <option value="tiruppur">Tiruppur (Only Available Now)</option>
+        <option value="chennai">Chennai (Coming Soon)</option>
+        <option value="coimbatore">Coimbatore (Coming Soon)</option>
+        <option value="madurai">Madurai (Coming Soon)</option>
+        <option value="trichy">Trichy (Coming Soon)</option>
+        <option value="salem">Salem (Coming Soon)</option>
+        <option value="vellore">Vellore (Coming Soon)</option>
+        <option value="erode">Erode (Coming Soon)</option>
+        <option value="thoothukudi">Thoothukudi (Coming Soon)</option>
+        <option value="tirunelveli">Tirunelveli (Coming Soon)</option>
+        <option value="karur">Karur (Coming Soon)</option>
+        <option value="thanjavur">Thanjavur (Coming Soon)</option>
+        <option value="dharmapuri">Dharmapuri (Coming Soon)</option>
       </select>
 
       <label for="subCitySelect">Sub-City/Area:</label>
