--- a/index.html
+++ b/index.html
@@ -1,113 +1,144 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tamil Nadu Bus Directory</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
-    .message {
-      margin-top: 20px;
-      font-weight: bold;
-      color: #2d3748;
-    }
-    .result-section {
-      margin-top: 30px;
-      padding: 10px;
-      font-size: 1rem;
-      color: #333;
-    }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }body {
+  background: #f7f9fb;
+  color: #2d3748;
+  padding: 20px;
+}
+
+header {
+  background: #2b6cb0;
+  color: white;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+header h1 {
+  font-size: 2rem;
+  margin-bottom: 8px;
+}
+
+main {
+  max-width: 600px;
+  margin: auto;
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+  font-weight: 600;
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #cbd5e0;
+  margin-bottom: 15px;
+}
+
+.message {
+  font-weight: bold;
+  color: #e53e3e;
+  margin-top: 10px;
+}
+
+.result-section {
+  margin-top: 20px;
+}
+
+.result-section h3 {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+  color: #2c5282;
+}
+
+.result-section ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.result-section li {
+  background: #edf2f7;
+  margin-bottom: 8px;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.result-section small {
+  color: #718096;
+}
+
+footer {
+  text-align: center;
+  margin-top: 40px;
+  color: #718096;
+}
+
   </style>
 </head>
 <body>
   <header>
     <h1>Tamil Nadu Bus Directory</h1>
-    <p>Select your city and area to explore bus routes</p>
-  </header>
-
-  <main>
-    <section class="dropdown-section">
+    <p>Select your city and area to explore bus routes and stops</p>
+  </header>  <main>
+    <section>
       <label for="citySelect">City:</label>
       <select id="citySelect" onchange="populateSubCities()">
         <option value="">Select a City</option>
-        <option value="tiruppur">Tiruppur (Only Available Now)</option>
+        <option value="tiruppur">Tiruppur (Available)</option>
         <option value="chennai">Chennai (Coming Soon)</option>
         <option value="coimbatore">Coimbatore (Coming Soon)</option>
-        <option value="madurai">Madurai (Coming Soon)</option>
-        <option value="trichy">Trichy (Coming Soon)</option>
-        <option value="salem">Salem (Coming Soon)</option>
-        <option value="vellore">Vellore (Coming Soon)</option>
-        <option value="erode">Erode (Coming Soon)</option>
-        <option value="thoothukudi">Thoothukudi (Coming Soon)</option>
-        <option value="tirunelveli">Tirunelveli (Coming Soon)</option>
-        <option value="karur">Karur (Coming Soon)</option>
-        <option value="thanjavur">Thanjavur (Coming Soon)</option>
-        <option value="dharmapuri">Dharmapuri (Coming Soon)</option>
-      </select>
+        <!-- Add more cities here -->
+      </select><label for="subCitySelect">Sub-City/Area:</label>
+  <select id="subCitySelect" style="display: none;" onchange="showSelectedArea()">
+    <option value="">Select a Sub-City</option>
+  </select>
 
-      <label for="subCitySelect">Sub-City/Area:</label>
-      <select id="subCitySelect" style="display: none;" onchange="showSelectedArea()">
-        <option value="">Select a Sub-City</option>
-      </select>
+  <div id="message" class="message"></div>
+</section>
 
-      <div id="message" class="message"></div>
-    </section>
+<section class="result-section" id="resultSection"></section>
 
-    <section class="result-section" id="resultSection">
-      <!-- Display area -->
-    </section>
-  </main>
-
-  <footer>
+  </main>  <footer>
     <p>Made with love by GHOTSOO</p>
-  </footer>
-
-  <script>
+  </footer>  <script>
     const tiruppurSubAreas = {
-      "tiruppur-old-bus-stand": {
-        name: "Tiruppur Old Bus Stand",
-        routes: ["Coimbatore", "Erode", "Palladam", "Kangeyam"]
-      },
-      "new-bus-stand": {
-        name: "New Bus Stand",
-        routes: ["Dharapuram", "Avinashi", "Karur", "Thanjavur"]
-      },
-      "kangeyam": {
-        name: "Kangeyam",
-        routes: ["Erode", "Karur", "Dindigul"]
-      },
-      "avinashi": {
-        name: "Avinashi",
-        routes: ["Coimbatore", "Mettupalayam", "Coonoor"]
-      },
       "palladam": {
         name: "Palladam",
-        routes: ["Udumalpet", "Pollachi", "Coimbatore"]
+        routes: [
+          { destination: "Udumalpet", via: ["Mangalam", "Madathukulam"] },
+          { destination: "Pollachi", via: ["Sultanpet", "Kinathukadavu"] },
+          { destination: "Coimbatore", via: ["Sulur", "Singanallur", "Peelamedu"] }
+        ]
       },
-      "uthukuli": {
-        name: "Uthukuli",
-        routes: ["Erode", "Gobichettipalayam"]
-      },
-      "mangalam": {
-        name: "Mangalam",
-        routes: ["Dharapuram", "Tiruppur"]
-      },
-      "perumanallur": {
-        name: "Perumanallur",
-        routes: ["Tiruppur", "Erode"]
-      },
-      "somanur": {
-        name: "Somanur",
-        routes: ["Sulur", "Coimbatore"]
-      },
-      "dharapuram": {
-        name: "Dharapuram",
-        routes: ["Tiruppur", "Karur", "Madurai"]
-      },
-      "chennimalai": {
-        name: "Chennimalai",
-        routes: ["Erode", "Kangeyam", "Perundurai"]
+      "tiruppur-old-bus-stand": {
+        name: "Tiruppur Old Bus Stand",
+        routes: [
+          { destination: "Coimbatore", via: ["Somanur", "Sulur", "Singanallur"] },
+          { destination: "Erode", via: ["Perumanallur", "Perundurai"] },
+          { destination: "Palladam", via: ["Mangalam"] },
+          { destination: "Kangeyam", via: ["Uthukuli"] }
+        ]
       }
+      // Add more sub-areas similarly
     };
 
     function populateSubCities() {
@@ -143,16 +174,21 @@
 
       if (selectedKey && tiruppurSubAreas[selectedKey]) {
         const area = tiruppurSubAreas[selectedKey];
-        const routesList = area.routes.map(route => `<li>${route}</li>`).join("");
-        resultSection.innerHTML = `
-          <h3>${area.name}</h3>
-          <p>Buses travel from this area to:</p>
-          <ul>${routesList}</ul>
-        `;
+        let htmlContent = `<h3>${area.name}</h3><p>Buses travel from this area to:</p><ul>`;
+
+        area.routes.forEach(route => {
+          htmlContent += `<li><strong>${route.destination}</strong>`;
+          if (route.via && route.via.length) {
+            htmlContent += `<br><small>via: ${route.via.join(", ")}</small>`;
+          }
+          htmlContent += `</li>`;
+        });
+
+        htmlContent += `</ul>`;
+        resultSection.innerHTML = htmlContent;
       } else {
         resultSection.innerHTML = "";
       }
     }
-  </script>
-</body>
+  </script></body>
 </html>
