--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     <p>Made with love by GHOTSOO</p>
   </footer>
   <script>
+function toggleDarkMode() {
+  document.body.classList.toggle("dark-mode");
+}
     const tiruppurSubAreas = {
       "palladam": {
         name: "Palladam",
