--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="result-section" id="resultSection"></section>
   </main>
   <footer>
-    <p>Made with love by GHOTSOO</p>
+    <p>Easy access with ghotsoo</p>
   </footer>
   <script>
 function toggleDarkMode() {
