--- a/index.html
+++ b/index.html
@@ -4,121 +4,222 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tamil Nadu Bus Directory</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5fefb;
+    * {
       margin: 0;
       padding: 0;
-      transition: background-color 0.3s, color 0.3s;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
     }
-
-    .dark-mode {
-      background-color: #121212;
-      color: white;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 30px auto;
+    body {
+      background: #f7f9fb;
+      color: #2d3748;
       padding: 20px;
-      background-color: white;
-      border-radius: 10px;
+    }
+    header {
+      background: #2b6cb0;
+      color: white;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 8px;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-
-    .dark-mode .container {
-      background-color: #1e1e1e;
-      box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 5px;
     }
-
-    h1 {
-      text-align: center;
-      color: #005bac;
-    }
-
     select {
       width: 100%;
       padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      font-size: 1em;
+      border-radius: 8px;
+      border: 1px solid #cbd5e0;
+      margin-bottom: 15px;
     }
-
-    #resultSection {
-      font-size: 1.1em;
+    .message {
+      font-weight: bold;
+      color: #e53e3e;
+      margin-top: 10px;
+    }
+    .result-section {
       margin-top: 20px;
     }
-
-    h3 {
-      margin-bottom: 5px;
+    .result-section h3 {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+      color: #2c5282;
     }
-
-    .bus-tags {
-      margin-top: 5px;
+    .result-section ul {
+      list-style: none;
+      padding-left: 0;
     }
-
-    .bus-tag {
-      display: inline-block;
-      background-color: #007bff;
-      color: white;
-      padding: 6px 12px;
-      margin: 3px;
-      border-radius: 5px;
-      font-size: 1.1em;
+    .result-section li {
+      background: #edf2f7;
+      margin-bottom: 8px;
+      padding: 10px;
+      border-radius: 8px;
+      font-size: 1.1rem;
     }
-
-    .dark-mode .bus-tag {
-      background-color: #00aaff;
+    .result-section small {
+      color: #718096;
+      font-size: 1rem;
     }
-
-    button {
-      margin: 10px auto;
-      display: block;
-      padding: 8px 20px;
-      font-size: 1em;
-    }
-
-    #message {
-      text-align: center;
-      font-size: 1.1em;
-      color: #d9534f;
-    }
-
-    .dark-mode #message {
-      color: #ff8080;
-    }
-
     footer {
       text-align: center;
-      font-size: 1em;
       margin-top: 40px;
-      opacity: 0.6;
+      color: #718096;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Tamil Nadu Bus Directory</h1>
     <p>Select your city and area to explore bus routes and stops</p>
-    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-
-    <label for="citySelect"><strong>City:</strong></label>
-    <select id="citySelect" onchange="populateSubCities()">
-      <option value="">Select a City</option>
-      <option value="tiruppur">Tiruppur (Available)</option>
-    </select>
-
-    <label for="subCitySelect"><strong>Sub-City/Area:</strong></label>
-    <select id="subCitySelect" onchange="showSelectedArea()"></select>
-
-    <div id="message"></div>
-    <div id="resultSection"></div>
-  </div>
-
-  <footer>Easy access with ghotsoo</footer>
-
-  <script src="java.js"></script>
-</body>
-</html>
+  </header>
+  <main>
+    <section>
+      <label for="citySelect">City:</label>
+      <select id="citySelect" onchange="populateSubCities()">
+        <option value="">Select a City</option>
+        <option value="tiruppur">Tiruppur (Available)</option>
+        <option value="chennai">Chennai (Coming Soon)</option>
+        <option value="coimbatore">Coimbatore (Coming Soon)</option>
+      </select>
+      <label for="subCitySelect">Sub-City/Area:</label>
+      <select id="subCitySelect" style="display: none;" onchange="showSelectedArea()">
+        <option value="">Select a Sub-City</option>
+      </select>
+      <div id="message" class="message"></div>
+    </section>
+    <section class="result-section" id="resultSection"></section>
+  </main>
+  <footer>
+    <p>Easy access with ghotsoo</p>
+  </footer>
+  <script>
+    const tiruppurSubAreas = {
+      "tiruppur-old-bus-stand": {
+        name: "Tiruppur Old Bus Stand",
+        routes: [
+          {
+            destination: "Somanur",
+            stops: ["Tiruppur Old Bus Stand", "Veerapandi", "Somanur"],
+            busNumbers: ["5", "5A", "5B", "14", "32B"]
+          },
+          {
+            destination: "Coimbatore",
+            stops: ["Tiruppur Old Bus Stand", "Somanur", "Sulur", "Singanallur", "Peelamedu", "Gandhipuram"],
+            busNumbers: ["20A", "30D", "30F", "30G", "40A", "90A"]
+          },
+          {
+            destination: "Erode",
+            stops: ["Tiruppur Old Bus Stand", "Perumanallur", "Perundurai", "Erode"],
+            busNumbers: ["26", "26A", "54", "43"]
+          },
+          {
+            destination: "Palladam",
+            stops: ["Tiruppur Old Bus Stand", "Mangalam", "Palladam"],
+            busNumbers: ["10", "10A"]
+          },
+          {
+            destination: "Kangeyam",
+            stops: ["Tiruppur Old Bus Stand", "Uthukuli", "Kangeyam"],
+            busNumbers: ["12", "12A"]
+          },
+          {
+            destination: "Dharapuram",
+            stops: ["Tiruppur Old Bus Stand", "Uthukuli", "Kangeyam", "Dharapuram"],
+            busNumbers: ["15", "15A", "15B"]
+          },
+          {
+            destination: "Avinashi",
+            stops: ["Tiruppur Old Bus Stand", "Perumanallur", "Avinashi"],
+            busNumbers: ["16", "16A"]
+          }
+        ]
+      },
+      "tiruppur-new-bus-stand": {
+        name: "Tiruppur New Bus Stand",
+        routes: [
+          {
+            destination: "Coimbatore",
+            stops: ["Tiruppur New Bus Stand", "Veerapandi", "Somanur", "Sulur", "Singanallur", "Peelamedu", "Gandhipuram"],
+            busNumbers: ["20A", "30D", "30F", "30G", "40A", "90A"]
+          },
+          {
+            destination: "Erode",
+            stops: ["Tiruppur New Bus Stand", "Perumanallur", "Perundurai", "Erode"],
+            busNumbers: ["26", "26A", "54", "43"]
+          }
+        ]
+      },
+      "kovil-vazhi-bus-stand": {
+        name: "Kovil Vazhi Bus Stand",
+        routes: [
+          {
+            destination: "Madurai",
+            stops: ["Kovil Vazhi Bus Stand", "Karur", "Dindigul", "Madurai"],
+            busNumbers: ["101", "102"]
+          },
+          {
+            destination: "Chennai",
+            stops: ["Kovil Vazhi Bus Stand", "Salem", "Vellore", "Chennai"],
+            busNumbers: ["201", "202"]
+          }
+        ]
+      },
+      "palladam-bus-stand": {
+        name: "Palladam Bus Stand",
+        routes: [
+          {
+            destination: "Coimbatore",
+            stops: ["Palladam", "Sulur", "Singanallur", "Peelamedu", "Gandhipuram"],
+            busNumbers: ["22", "22A", "22C", "66"]
+          },
+          {
+            destination: "Udumalpet",
+            stops: ["Palladam", "Mangalam", "Madathukulam", "Udumalpet"],
+            busNumbers: ["10", "10A", "10B"]
+          },
+          {
+            destination: "Pollachi",
+            stops: ["Palladam", "Sultanpet", "Kinathukadavu", "Pollachi"],
+            busNumbers: ["20", "20A"]
+          }
+        ]
+      },
+      "avinashi-bus-stand": {
+        name: "Avinashi Bus Stand",
+        routes: [
+          {
+            destination: "Tiruppur",
+            stops: ["Avinashi", "Perumanallur", "Tiruppur"],
+            busNumbers: ["16", "16A"]
+          },
+          {
+            destination: "Coimbatore",
+            stops: ["Avinashi", "Karumathampatti", "Neelambur", "Singanallur", "Gandhipuram"],
+            busNumbers: ["30", "30A"]
+          }
+        ]
+      },
+      "dharapuram-bus-stand": {
+        name: "Dharapuram Bus Stand",
+        routes: [
+          {
+            destination: "Coimbatore",
+            stops: ["Dharapuram", "Kangeyam", "Uthukuli", "Tiruppur", "Avinashi", "56
