--- a/index.html
+++ b/index.html
@@ -2,80 +2,203 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tamil Nadu Bus Directory</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
   <style>
-    body.dark-mode {
-      background-color: #121212;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background: #f7f9fb;
+      color: #2d3748;
+      padding: 20px;
+    }
+
+    header {
+      background: #2b6cb0;
       color: white;
-    }
-
-    .card {
-      background-color: white;
-      border-radius: 10px;
-      padding: 1.5em;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      margin-top: 1em;
-    }
-
-    body.dark-mode .card {
-      background-color: #1e1e1e;
-    }
-
-    .bus-tag {
-      background-color: #f0f0f0;
-      color: #000;
-      padding: 5px 10px;
-      margin: 5px;
-      border-radius: 5px;
-      font-size: 1.2em;
-      display: inline-block;
-    }
-
-    body.dark-mode .bus-tag {
-      background-color: #333;
-      color: #fff;
-    }
-
-    .footer {
-      margin-top: 2em;
-      font-size: 0.9em;
-      color: #777;
+      padding: 20px;
+      border-radius: 12px;
       text-align: center;
+      margin-bottom: 30px;
+    }
+
+    header h1 {
+      font-size: 2rem;
+      margin-bottom: 8px;
+    }
+
+    main {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 5px;
+    }
+
+    select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #cbd5e0;
+      margin-bottom: 15px;
+    }
+
+    .message {
+      font-weight: bold;
+      color: #e53e3e;
+      margin-top: 10px;
+    }
+
+    .result-section {
+      margin-top: 20px;
+    }
+
+    .result-section h3 {
+      font-size: 1.25rem;
+      margin-bottom: 10px;
+      color: #2c5282;
+    }
+
+    .result-section ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .result-section li {
+      background: #edf2f7;
+      margin-bottom: 8px;
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    .result-section small {
+      color: #718096;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      color: #718096;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <h2>Tamil Nadu Bus Directory</h2>
-      <p>Select your city and area to explore bus routes and stops</p>
-      <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  <header>
+    <h1>Tamil Nadu Bus Directory</h1>
+    <p>Select your city and area to explore bus routes and stops</p>
+  </header>
 
-      <div>
-        <label for="citySelect">City:</label>
-        <select id="citySelect" onchange="populateSubCities()">
-          <option value="">Select a City</option>
-          <option value="tiruppur">Tiruppur (Available)</option>
-        </select>
-      </div>
+  <main>
+    <section>
+      <label for="citySelect">City:</label>
+      <select id="citySelect" onchange="populateSubCities()">
+        <option value="">Select a City</option>
+        <option value="tiruppur">Tiruppur (Available)</option>
+        <option value="chennai">Chennai (Coming Soon)</option>
+        <option value="coimbatore">Coimbatore (Coming Soon)</option>
+        <!-- Add more cities here -->
+      </select>
 
-      <div>
-        <label for="subCitySelect">Sub-City/Area:</label>
-        <select id="subCitySelect" onchange="showSelectedArea()">
-          <option value="">Select a Sub-City</option>
-        </select>
-      </div>
+      <label for="subCitySelect">Sub-City/Area:</label>
+      <select id="subCitySelect" style="display: none;" onchange="showSelectedArea()">
+        <option value="">Select a Sub-City</option>
+      </select>
 
-      <div id="message" style="margin-top: 1em; color: gray;"></div>
-    </div>
+      <div id="message" class="message"></div>
+    </section>
 
-    <div class="card" id="resultSection"></div>
+    <section class="result-section" id="resultSection"></section>
+  </main>
 
-    <div class="footer">Easy access with ghotsoo</div>
-  </div>
+  <footer>
+    <p>Made with love by GHOTSOO</p>
+  </footer>
 
-  <script src="java.js"></script>
+  <script>
+    const tiruppurSubAreas = {
+      "palladam": {
+        name: "Palladam",
+        routes: [
+          { destination: "Udumalpet", via: ["Mangalam", "Madathukulam"] },
+          { destination: "Pollachi", via: ["Sultanpet", "Kinathukadavu"] },
+          { destination: "Coimbatore", via: ["Sulur", "Singanallur", "Peelamedu"] }
+        ]
+      },
+      "tiruppur-old-bus-stand": {
+        name: "Tiruppur Old Bus Stand",
+        routes: [
+          { destination: "Coimbatore", via: ["Somanur", "Sulur", "Singanallur"] },
+          { destination: "Erode", via: ["Perumanallur", "Perundurai"] },
+          { destination: "Palladam", via: ["Mangalam"] },
+          { destination: "Kangeyam", via: ["Uthukuli"] }
+        ]
+      }
+      // Add more sub-areas similarly
+    };
+
+    function populateSubCities() {
+      const city = document.getElementById("citySelect").value;
+      const subCitySelect = document.getElementById("subCitySelect");
+      const messageDiv = document.getElementById("message");
+      const resultSection = document.getElementById("resultSection");
+
+      subCitySelect.innerHTML = '<option value="">Select a Sub-City</option>';
+      messageDiv.textContent = "";
+      resultSection.innerHTML = "";
+
+      if (city === "tiruppur") {
+        for (const key in tiruppurSubAreas) {
+          const option = document.createElement("option");
+          option.value = key;
+          option.textContent = tiruppurSubAreas[key].name;
+          subCitySelect.appendChild(option);
+        }
+        subCitySelect.style.display = "block";
+      } else if (city) {
+        subCitySelect.style.display = "none";
+        messageDiv.textContent = "This area will be available soon!";
+      } else {
+        subCitySelect.style.display = "none";
+        messageDiv.textContent = "";
+      }
+    }
+
+    function showSelectedArea() {
+      const selectedKey = document.getElementById("subCitySelect").value;
+      const resultSection = document.getElementById("resultSection");
+
+      if (selectedKey && tiruppurSubAreas[selectedKey]) {
+        const area = tiruppurSubAreas[selectedKey];
+        let htmlContent = `<h3>${area.name}</h3><p>Buses travel from this area to:</p><ul>`;
+
+        area.routes.forEach(route => {
+          htmlContent += `<li><strong>${route.destination}</strong>`;
+          if (route.via && route.via.length) {
+            htmlContent += `<br><small>via: ${route.via.join(", ")}</small>`;
+          }
+          htmlContent += `</li>`;
+        });
+
+        htmlContent += `</ul>`;
+        resultSection.innerHTML = htmlContent;
+      } else {
+        resultSection.innerHTML = "";
+      }
+    }
+  </script>
 </body>
 </html>
